--- a/05_17_ex/html/ex.html
+++ b/05_17_ex/html/ex.html
@@ -13,21 +13,21 @@
         <ul class="menu-list">
             <li><a href="#">홈으로</a></li>
             <li><a href="#">회사소개</a><i class="xi-caret-down-min"></i>
-                <ul>
+                <ul class="submenu">
                     <li><a href="#">회사연혁</a></li>
                     <li><a href="#">ceo인사말</a></li>
                     <li><a href="#">우리의비전</a></li>
                 </ul>
             </li>
             <li><a href="#">제품소개</a><i class="xi-caret-down-min"></i>
-                <ul>
-                    <li><a href="#">청소기</a></li>
-                    <li><a href="#">냉장고</a></li>
-                    <li><a href="#">그외</a></li>
+                <ul class="submenu">
+                    <li><a href="#">제품1</a></li>
+                    <li><a href="#">제품2</a></li>
+                    <li><a href="#">제품3</a></li>
                 </ul>
             </li>
             <li><a href="#">커뮤니티</a><i class="xi-caret-down-min"></i>
-                <ul>
+                <ul class="submenu">
                     <li><a href="#">공지사항</a></li>
                     <li><a href="#">포토갤러리</a></li>
                     <li><a href="#">자료실</a></li>
