--- a/06_14_hongkong/html/ex.html
+++ b/06_14_hongkong/html/ex.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="../css/ex.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <section>
         <div class="big_box">
-            
-            <div class="img">
-                <i class="xi-airplane xi-3x"></i>
-            </div>
+            <div class="icon"><i class="fa-solid fa-thumbs-up fa-sm"></i></div>
+            <div class="img"></div>
             <p class="trip_text">홍콩 3박4일 자유여행</p>
             <div class="cost_box">
                 <p class="cost">652000</p>
@@ -21,6 +19,7 @@
                 min="0" max="100" step="1" value="1">
             </div>
         </div>
+
         <div class="low_box">
             <p class="t1">결제예정금액</p>
             <p class="total_cost">0</p>
