--- a/07_12_spin_ex/html/ex.html
+++ b/07_12_spin_ex/html/ex.html
@@ -23,7 +23,7 @@
             <i class="xi-angle-left xi-2x" id="right"></i>
             <i class="xi-angle-right xi-2x" id="left"></i>
             <div class="stop_and_play">
-                <i class="xi-stop xi-2x" id="stop"></i>
+                <i class="xi-stop xi-2x passive" id="stop"></i>
                 <i class="xi-play xi-2x" id="play"></i>    
             </div>
             
