--- a/07_03_timer/html/ex.html
+++ b/07_03_timer/html/ex.html
@@ -8,13 +8,17 @@
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js'></script>
 </head>
 <body>
-    <div class="time_box"></div>
-    <div class="btn_box">
-        <button id="start">start</button>
-        <button id="stop">stop</button>
-        <button id="record">record</button>
-    </div>
-    <ul class="rec"></ul>
+    <section>
+        <div class="time_box"></div>
+        <div class="btn_box">
+            <button id="start">start</button>
+            <button id="stop">stop</button>
+            <button id="record">record</button>
+        </div>
+        
+        <ul class="rec"></ul>
+    </section>
+    
 
     <script src="../js/timer.js"></script>
 </body>
