update web page

--- a/07_31_grid_ex/html/index.html
+++ b/07_31_grid_ex/html/index.html
@@ -284,7 +284,7 @@
             <i class="xi-close xi-2x"></i>
             <ul>
                 <li id="popup1">About</li>
-                <li id="popup2">Our Tour</li>
+                <li id="popup2">Products</li>
                 <li id="popup3">Gallary</li>
                 <li id="popup4">Blog</li>
                 <li id="popup5">Pages</li>
@@ -301,7 +301,7 @@
             </div>
     
             <div class="subpopup sub2">
-                <h2>Our Tour</h2>
+                <h2>Products</h2>
                 <i class="xi-close xi-2x"></i>
                 <ul>
                     <li>submenu</li>
