update web page

--- a/07_31_web_page/html/index.html
+++ b/07_31_web_page/html/index.html
@@ -21,7 +21,11 @@
                     <h1>Pineapple</h1>
                     <div class="logo-right">
                         <div class="t1"><i class="xi-time"></i>09:00AM - 05:00PM</div>
-                        <div class="t2"><i class="xi-call"></i>010 - sdsd - dsds</div>
+                        <div class="t2">
+                            <a href="tel:010-0000-0000">
+                                <i class="xi-call"></i> 010-0000-0000
+                            </a>
+                        </div>
                         <button>Get in touch</button>
                     </div>
                 </div>
@@ -341,8 +345,16 @@
             </div>
 
         </div>
-    
-        
+
+        <div class="gray-box">
+            <div class="submit-popup">
+                <i class="xi-close xi-2x"></i>
+                <div class="textbox">
+                    <h2>Thank you very much!!</h2>
+                    <p>asdfasdf</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
