--- a/test/a.html
+++ b/test/a.html
@@ -4,11 +4,11 @@
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <title></title>
-<link rel='stylesheet' href='./a.css'>
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+<link rel='stylesheet' href='../css/a.scss'>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js'></script>
 </head>
 <body>
-    <i class="xi-search"></i>
+  <div class="box1"><h1>h1</h1><h2>h2</h2></div>
+  <div class="box2"><h1>h1</h1><h2>h2</h2></div>
 </body>
 </html>
