update my project

--- a/my_project/html/index.html
+++ b/my_project/html/index.html
@@ -7,6 +7,7 @@
 
 <!-- icon -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -74,10 +75,10 @@
             <script>
             var swiper = new Swiper(".mySwiper", {
                 loop: true,
-                autoplay: {
-                    delay: 3500,
-                    disableOnInteraction: false,
-                },
+                // autoplay: {
+                //     delay: 3500,
+                //     disableOnInteraction: false,
+                // },
             });
             </script>
         </div>
@@ -97,21 +98,21 @@
                         <div class="item">
                             <div class="food-img img1"></div>
                             <div class="text-box">
-                                <h3>BHC 뿌링클</h3>
+                                <h3>BHC <br>뿌링클</h3>
                                 <p>뿌링뿌링! 세상에 없던 마법의 맛 뿌링클</p>
                             </div>
                         </div>
                         <div class="item">
                             <div class="food-img img2"></div>
                             <div class="text-box">
-                                <h3>BBQ 황금올리브</h3>
+                                <h3>BBQ <br>황금올리브</h3>
                                 <p>바삭 육즙 가득한 부드러운 속살이 환상적인 건강한 치킨</p>
                             </div>
                         </div>
                         <div class="item">
                             <div class="food-img img3"></div>
                             <div class="text-box">
-                                <h3>교촌 허니콤보</h3>
+                                <h3>교촌 <br>허니콤보</h3>
                                 <p>달콤한 허니소스에 쫄깃한 날개와
                                     담백한 다리가 만난 메뉴</p>
                             </div>
@@ -129,21 +130,21 @@
                         <div class="item">
                             <div class="food-img img4"></div>
                             <div class="text-box">
-                                <h3>롯데리아 새우버거</h3>
+                                <h3>롯데리아 <br>새우버거</h3>
                                 <p>새우가 통째로! 수제버거 못지않은 패티 퀄리티</p>
                             </div>
                         </div>
                         <div class="item">
                             <div class="food-img img5"></div>
                             <div class="text-box">
-                                <h3>맥도날드 불고기버거</h3>
+                                <h3>맥도날드 <br>불고기버거</h3>
                                 <p>진한 불고기 소스의 패티가 두 장!</p>
                             </div>
                         </div>
                         <div class="item">
                             <div class="food-img img6"></div>
                             <div class="text-box">
-                                <h3>버거킹 와퍼</h3>
+                                <h3>버거킹 <br>와퍼</h3>
                                 <p>불에 직접 구운 순 쇠고기 패티에 싱싱한 야채가 한가득~</p>
                             </div>
                         </div>
@@ -182,6 +183,35 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="tag-section">
+        <ul>
+            <li><i class="fa-solid fa-mug-hot fa-2xl"></i></li>
+            <li><i class="fa-solid fa-lemon fa-2xl"></i></li>
+            <li><i class="fa-solid fa-fish fa-2xl"></i></li>
+            <li><i class="fa-solid fa-seedling fa-2xl"></i></li>
+            <li><i class="fa-solid fa-wine-bottle fa-2xl"></i></li>
+            <li><i class="fa-solid fa-pizza-slice fa-2xl"></i></li>
+            <li><i class="fa-solid fa-ice-cream fa-2xl"></i></li>
+            <li><i class="fa-solid fa-carrot fa-2xl"></i></li>
+            <li><i class="fa-solid fa-cheese fa-2xl"></i></li>
+            <li><i class="fa-solid fa-cookie fa-2xl"></i></li>
+            <li><i class="fa-solid fa-apple-whole fa-2xl"></i></li>
+            <li><i class="fa-solid fa-bowl-rice fa-2xl"></i></li>
+            <li><i class="fa-solid fa-bread-slice fa-2xl"></i></li>
+        </ul>
+        <ul>
+            <li><i class="fa-solid fa-route fa-2xl"></i></li>
+            <li><i class="fa-solid fa-street-view fa-2xl"></i></li>
+            <li><i class="fa-solid fa-location-crosshairs fa-2xl"></i></li>
+            <li><i class="fa-solid fa-hand-holding-dollar fa-2xl"></i></li>
+            <li><i class="fa-solid fa-clock fa-2xl"></i></li>
+        </ul>
+    </section>
+
+    <section class="footer">
+        
     </section>
     
 
