--- a/my_project/html/index.html
+++ b/my_project/html/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title></title>
+<title>배달 사이트</title>
 
 <!-- icon -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
