update my project
update coding portfolio

--- a/my_project/kkh/html/home.html
+++ b/my_project/kkh/html/home.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- header -->
       <header
         class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
       >
@@ -45,6 +46,7 @@
         </ul>
       </header>
 
+      <!-- title -->
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
         <div class="row intro-section">
           <h1 class="fw-bold">Coding portfolio</h1>
@@ -75,8 +77,9 @@
         </div>
       </section>
 
+      <!-- sc -->
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
-        <div class="rounded-3 algorithm-section row">
+        <div class="algorithm-section sc rounded-3 row">
           <div class="img-box col-4 bg-white rounded-3"></div>
           <div class="text-box col-8">
             <h2 class="fw-bold">알고리즘과 자료구조 공부</h2>
@@ -94,7 +97,7 @@
       </section>
 
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
-        <div class="SOLID-section rounded-3 row">
+        <div class="SOLID-section sc rounded-3 row">
           <div class="text-box col-8">
             <h2 class="fw-bold">SOLID 프로그래밍</h2>
             <p>클래스로 데이터의 생성, 전달, 계산, 출력</p>
@@ -110,7 +113,7 @@
       </section>
 
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
-        <div class="rounded-3 web-section row">
+        <div class="web-section sc rounded-3 row">
           <div class="img-box col-4 bg-white rounded-3"></div>
           <div class="text-box col-8">
             <h2 class="fw-bold">웹 프로그래밍</h2>
@@ -123,7 +126,7 @@
       </section>
 
       <section data-aos="fade-up" data-aos-once="true" data-aos-duration="700">
-        <div class="others-section rounded-3 row">
+        <div class="others-section sc rounded-3 row">
           <div class="text-box col-8">
             <h2 class="fw-bold">그 외 경험</h2>
             <p>c++, java, python 의 특징</p>
