--- a/my_project/kkh/html/data_structure.html
+++ b/my_project/kkh/html/data_structure.html
@@ -17,58 +17,270 @@
     <title>Data structure</title>
   </head>
   <body>
-    <div class="container">
-      <header
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
-      >
-        <div class="col-md-3 mb-2 mb-md-0">
-          <a
-            href="/"
-            class="d-inline-flex link-body-emphasis text-decoration-none"
-          >
-            Coding portfolid
-          </a>
-        </div>
-
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="./home.html" class="nav-link px-2">Home</a></li>
-          <li>
-            <a href="#" class="nav-link px-2 link-secondary">Data structure</a>
+    <div class="big">
+      <!-- sidebar -->
+      <div class="sidebar flex-shrink-0 p-3 bg-white">
+        <ul class="list-unstyled ps-0">
+          <li class="mb-1">
+            <button
+              class="btn btn-toggle align-items-center rounded collapsed"
+              data-bs-toggle="collapse"
+              data-bs-target="#home-collapse"
+              aria-expanded="true"
+            >
+              Sort
+            </button>
+            <div class="collapse" id="home-collapse">
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li style="cursor: pointer">O(n**2)</li>
+                <li style="cursor: pointer">Merge sort</li>
+                <li style="cursor: pointer">Quick sort</li>
+              </ul>
+            </div>
           </li>
-          <li><a href="#" class="nav-link px-2">SOLID</a></li>
-          <li><a href="#" class="nav-link px-2">Deep learning</a></li>
-        </ul>
-      </header>
 
-      <section>
-        <!-- code div sample -->
-        <div class="bg-dark text-white rounded-1 code">
-          <p class="text-primary">asdfasdfasdfasdf</p>
-          <p>&#9;asdfaaasdfasdf</p>
-          <p>&#9;asdfasdfadsfasdfasdfasdf</p>
-          <p>&#9;&#9;asdfasdfadsfasdfasdfasdf</p>
+          <li class="mb-1">
+            <button
+              class="btn btn-toggle align-items-center rounded collapsed"
+              data-bs-toggle="collapse"
+              data-bs-target="#dashboard-collapse"
+              aria-expanded="false"
+            >
+              Dashboard
+            </button>
+            <div class="collapse" id="dashboard-collapse">
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a href="#" class="link-dark rounded">Overview</a></li>
+                <li><a href="#" class="link-dark rounded">Weekly</a></li>
+                <li><a href="#" class="link-dark rounded">Monthly</a></li>
+                <li><a href="#" class="link-dark rounded">Annually</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="mb-1">
+            <button
+              class="btn btn-toggle align-items-center rounded collapsed"
+              data-bs-toggle="collapse"
+              data-bs-target="#orders-collapse"
+              aria-expanded="false"
+            >
+              Orders
+            </button>
+            <div class="collapse" id="orders-collapse">
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a href="#" class="link-dark rounded">New</a></li>
+                <li><a href="#" class="link-dark rounded">Processed</a></li>
+                <li><a href="#" class="link-dark rounded">Shipped</a></li>
+                <li><a href="#" class="link-dark rounded">Returned</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="border-top my-3"></li>
+
+          <li class="mb-1">
+            <button
+              class="btn btn-toggle align-items-center rounded collapsed"
+              data-bs-toggle="collapse"
+              data-bs-target="#account-collapse"
+              aria-expanded="false"
+            >
+              Account
+            </button>
+            <div class="collapse" id="account-collapse">
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a href="#" class="link-dark rounded">New...</a></li>
+                <li><a href="#" class="link-dark rounded">Profile</a></li>
+                <li><a href="#" class="link-dark rounded">Settings</a></li>
+                <li><a href="#" class="link-dark rounded">Sign out</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div class="main-box">
+        <div class="container">
+          <header
+            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+          >
+            <div class="col-md-3 mb-2 mb-md-0">
+              <a
+                href="/"
+                class="d-inline-flex link-body-emphasis text-decoration-none"
+              >
+                Coding portfolid
+              </a>
+            </div>
+
+            <ul
+              class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0"
+            >
+              <li><a href="./home.html" class="nav-link px-2">Home</a></li>
+              <li>
+                <a href="#" class="nav-link px-2 link-secondary"
+                  >Data structure</a
+                >
+              </li>
+              <li><a href="#" class="nav-link px-2">SOLID</a></li>
+              <li><a href="#" class="nav-link px-2">Deep learning</a></li>
+            </ul>
+          </header>
+
+          <section class="big-sc">
+            <h2>정렬 알고리즘 요약</h2>
+            <p>시작하기에 앞서 데이터를 정렬하는 방법 살펴보기</p>
+
+            <div class="sm-sc">
+              <h3>시간복잡도 O(n**2) 의 정렬</h3>
+              <hr />
+              <p>버블, 선택, 삽입 정렬</p>
+
+              <div class="bg-dark text-white rounded-1 code">
+                길이가 n인 리스트 존재
+                <br />
+                <br />
+                버블 정렬
+                <br />
+                <p>&#9;</p>
+                앞에서부터 2개씩 n-1 번 비교, 교환
+                <br />
+                <p>&#9;</p>
+                이를 n 번만큼 다시 반복
+                <br />
+                <br />
+
+                선택 정렬
+                <br />
+                <p>&#9;</p>
+                모든 배열 순회, 제일 작은 수를 앞에 배치,
+                <br />
+                <p>&#9;</p>
+                이를 n 번만큼 다시 반복
+                <br />
+                <br />
+
+                삽입 정렬
+                <br />
+                <p>&#9;</p>
+                앞에서부터 뒤로 요소를 하나씩 추가해가며 삽입하며 정렬
+              </div>
+            </div>
+            <!-- <div class="sm-sc">
+              <h3>병합 정렬</h3>
+              <hr />
+              <p>배열을 반씩 나눠 합치며 정렬하는 방식</p>
+
+              <div class="bg-dark text-white rounded-1 code">
+                Divide and conquer 방식
+                <br />
+                <p>&#9;</p>
+                1이 될 때까지 배열을 반 씩 쪼갬
+                <br />
+                <p>&#9;</p>
+                두 개의 배열을 합칠 때 두 배열의 제일 앞에 있는 수를 비교하여
+                작은 수를 새로운 배열에 배치,
+                <br />
+                <p>&#9;</p>
+                두 배열을 모두 순회할 때까지 반복, 반환
+              </div>
+            </div> -->
+
+            <div class="sm-sc">
+              <h3>병합 정렬</h3>
+              <hr />
+              <p>배열을 반씩 나눠 합치며 정렬하는 방식</p>
+
+              <div class="bg-dark text-white rounded-1 code">
+                Divide and conquer 방식
+                <br />
+                <br />
+                <p>&#9;</p>
+                1이 될 때까지 배열을 반 씩 쪼갬
+                <br />
+                <br />
+                <p>&#9;</p>
+                두 개의 배열을 합칠 때 두 배열의 제일 앞에 있는 수를 비교하여
+                작은 수를 새로운 배열에 배치,
+                <br />
+                <br />
+                <p>&#9;</p>
+                두 배열을 모두 순회할 때까지 반복
+                <br />
+                <br />
+                <p>&#9;</p>
+                배열이 1개일 경우 반환, 2개 이상일 경우 나머지 배열이 반환되었을
+                경우에만 반환
+              </div>
+              <p>배열을 반 씩 나누며 정렬, 시간복잡도 : O(nlog(n))</p>
+              <p>
+                퀵 정렬보다 조금 느리고 데이터가 2배 더 필요하지만(divide 하면서
+                리턴하기 전까지 데이터를 붙잡고 있어야 함) 데이터의 불균형함에
+                영향을 받지 않는다.
+              </p>
+            </div>
+
+            <div class="sm-sc">
+              <h3>퀵 정렬</h3>
+              <hr />
+              <p>
+                한 요소를 기준점으로 잡고(pivot) 작은 수와 큰 수를 나눠(divide)
+                나뉜 배열에 다시 동일한 작업을 수행(conquer) 하는 방식
+              </p>
+              <p>병합 정렬과 다르게 divide 하는 과정에 배열을 재배치한다</p>
+
+              <div class="bg-dark text-white rounded-1 code">
+                Divide and conquer 방식
+                <br />
+                <br />
+                <p>&#9;</p>
+                한 요소를 기준점으로 잡는다 (pivot)
+                <br />
+                <br />
+                <p>&#9;</p>
+                작은 수는 왼쪽, 큰 수를 오른쪽, pivot 을 가운데 배치한다
+                <br />
+                <br />
+                <p>&#9;</p>
+                pivot 기준 좌우 배열을 다시 pivot 을 잡고 동일한 작업을 수행한다
+              </div>
+              <p>
+                pivot 을 기준으로 배열을 반으로 나누면서 정렬, 시간복잡도 :
+                O(nlog(n))
+              </p>
+              <p>
+                다만, 데이터가 불균형하고 pivot 이 불균형하게 배치된다면 배열을
+                n번씩 모두 순회하게 되므로 이때 시간복잡도는 O(n**2)
+              </p>
+              <p>
+                이를 방지하기 위해 pivot 을 랜덤하게 배치하는 방법 존재 (완벽한
+                해결 방법은 아니다)
+              </p>
+              <p>
+                병합 정렬에 비해 빠르고 추가 메모리 공간이 필요 없지만(배열 생성
+                없이 기존 배열을 재배치하며 진행하기 때문) 데이터가 불균형하면
+                pivot 배치에 따라 정렬이 느려질 수 있다
+              </p>
+            </div>
+
+            <!-- code div sample -->
+            <!-- <div class="bg-dark text-white rounded-1 code">
+              <span class="text-primary">def </span>
+              <span class="text-warning">bubble_sort(arr):</span>
+              <br />
+              <p>&#9;</p>
+              blah blah
+              <br />
+              <p>&#9;&#9;</p>
+              blah blah blah
+            </div> -->
+          </section>
         </div>
-      </section>
+      </div>
     </div>
-    <section class="s1">
-      <div class="container">
-        <!-- code div sample -->
-        <div class="bg-dark text-white rounded-1 code">
-          <p class="text-primary">asdfasdfasdfasdf</p>
-          <p>&#9;asdfaaasdfasdf</p>
-          <p>&#9;asdfasdfadsfasdfasdfasdf</p>
-          <p>&#9;&#9;asdfasdfadsfasdfasdfasdf</p>
-        </div>
-      </div>
-    </section>
-    <section class="s2">
-      <!-- code div sample -->
-      <div class="bg-dark text-white rounded-1 code">
-        <p class="text-primary">asdfasdfasdfasdf</p>
-        <p>&#9;asdfaaasdfasdf</p>
-        <p>&#9;asdfasdfadsfasdfasdfasdf</p>
-        <p>&#9;&#9;asdfasdfadsfasdfasdfasdf</p>
-      </div>
-    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
   </body>
 </html>
