update my project
update coding portfolio

--- a/my_project/kkh/html/index.html
+++ b/my_project/kkh/html/index.html
@@ -37,9 +37,7 @@
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
           <li>
-            <a href="./data_structure.html" class="nav-link px-2"
-              >Data structure</a
-            >
+            <a href="./algorithm.html" class="nav-link px-2">Algorithm</a>
           </li>
           <li><a href="#" class="nav-link px-2">SOLID</a></li>
           <li><a href="#" class="nav-link px-2">Deep learning</a></li>
@@ -88,7 +86,7 @@
             <button
               type="button"
               class="btn btn-light"
-              onclick="location.href='./data_structure.html'"
+              onclick="location.href='./algorithm.html'"
             >
               Link
             </button>
